APDS-82 fixes from testing - fix for header settings button alignment, acceptability map highlighting in light and dark schemes editing forms, search button text in light and dark text, tbba form styling ( select form buttons as well as disabled button classes) . Unable to get passed file upload. Also synced various shades of reds to be one color code.

--- a/app/styles/badge.scss
+++ b/app/styles/badge.scss
@@ -40,7 +40,7 @@
      background-color: #66BB6A;
  }
  .Behind.badge {
-     background-color: #EF5350;
+     background-color: #db5760;
  }
  .Forward.badge {
      background-color: #42A5F5;
