--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -663,7 +663,7 @@ button.fsn-title-button {
     color: #fff;
 }
 .indicator_red {
-    background-color: #EF5350;
+    background-color: #db5760;
     color: #fff;
 }
 .indicator_red:hover {
@@ -841,7 +841,7 @@ button.tooltips-right.normal-case span {
     opacity: 1.0;
 }
 .tab-pane .btn-round.btn[disabled]:hover {
-    background-color: #EF5350;
+    background-color: #db5760;
     color: #fff;
 }
 /*pagination */
