--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -10,10 +10,10 @@
 .page-header h1 i.red,.red.lighten-2{background-color:#E57373;color:#fff}
 .page-header h1 i.red-text,.red-text.lighten-2{color:#E57373}
 .page-header h1 i.red-border,.red-border.lighten-2{border-color:#E57373}
-.red.lighten-1{background-color:#EF5350;color:#fff}
-.red-text.lighten-1{color:#EF5350}
-.red-border.lighten-1{border-color:#EF5350}
-.red{background-color:#e92848;color:#fff}
+.red.lighten-1{background-color:#db5760;color:#fff}
+.red-text.lighten-1{color:#db5760}
+.red-border.lighten-1{border-color:#db5760}
+.red{background-color:#db5760;color:#fff}
 .red-text{color:#e92848}
 .red-border{border-color:#e92848}
 .red.darken-1{background-color:#E53935;color:#fff}
