--- a/app/styles/dark.scss
+++ b/app/styles/dark.scss
@@ -901,4 +901,16 @@ background-color: #262e39;}
 	background-color:#262e39;
 	color:#fff
 }
-
+def_PRIMITIVE textarea, .def_PRIMITIVE select, .def_PRIMITIVE .custom-button, .def_PRIMITIVE .form-control[disabled], .def_PRIMITIVE [type=text].form-control[disabled], .def_PRIMITIVE [type=text].form-control[readonly] {
+    font-size: 11px;
+    height: 30px;
+    background-color: #b7dbff;
+    color: #474747;
+    box-shadow: none;
+}
+.def_FULLY_DEFINED textarea, .def_FULLY_DEFINED select, .def_FULLY_DEFINED .custom-button, .def_FULLY_DEFINED .form-control[disabled], .def_FULLY_DEFINED [type=text].form-control[disabled], .def_FULLY_DEFINED [type=text].form-control[readonly] {
+    background-color: #dbdbff;
+    color: #474747;
+    font-size: 11px;
+    height: 30px;
+}
