--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -729,7 +729,7 @@ sca-column .hasSVG {
     margin-top: 22px;
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
-    border-right: 8px solid #c13244;
+    border-right: 8px solid #db5760;
 }
 .arrow-amber {
     width: 0;
