--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -63,7 +63,7 @@ html {
     background-color: #eea633 ;
 }
 .saved.red {
-    background-color: #c13244 ;
+    background-color: #db5760 ;
 }
 .saved {
     padding: 8px 20px 8px 0px;
@@ -132,10 +132,7 @@ td select {
     font-size: 12px;
     font-weight: 400;
 }
-.red {
-    background-color: #c13244;
-    color: #fff;
-}
+
 .taxonomy-list h4 {
     font-size: 12px ;
 }
