--- a/app/styles/inactivation.scss
+++ b/app/styles/inactivation.scss
@@ -40,7 +40,7 @@
     }
 
     .btn-default.cancel-inactivation-btn {
-      background-color: #e21b3c;
+      background-color: #db5760;
       color: #fff;
       border-radius: 4px !important;
     }
